# Miyabi

./: .bash_profile  .gitignore
Documents_usami/Qiskit/: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Doxyfile  Intr.sh  README.md  circuit.qasm  client.md  developer.md  requirements.txt  server.md  vcpkg.json  venv.sh  venv.sh.o1263881  venv.sh.o1263882
Documents_usami/Qiskit/Chemistry/: chem.py  chem_async.py  chem_server.py  get_result.py  submit_job.py
Documents_usami/Qiskit/async/: latency.py  latency2.py  submit_job.py
Documents_usami/Qiskit/cmake/: common.cmake
Documents_usami/Qiskit/docs/html/: annotated.html  annotated_dup.js  classes.html  classgrpc__qc__simulator_1_1SimulatorServiceImpl-members.html  classgrpc__qc__simulator_1_1SimulatorServiceImpl.html  classgrpc__qc__simulator_1_1SimulatorServiceImpl.js  config_8h.html  config_8h.js  config_8h_source.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_a063914ab482288b7b0e1b2fca86158c.html  dir_a063914ab482288b7b0e1b2fca86158c.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  job__utils_8h.html  job__utils_8h.js  job__utils_8h_source.html  jwt_8h.html  jwt_8h.js  jwt_8h_source.html  main_8cpp.html  main_8cpp.js  menudata.js  namespacegrpc__qc__simulator.html  namespacegrpc__qc__simulator.js  namespacegrpc__qc__simulator_1_1detail.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespacequantum__simulator.html  namespaces.html  (+11 more)
Documents_usami/Qiskit/docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  namespaces_0.js  namespaces_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+1 more)
Documents_usami/Qiskit/examples/: call.py  get_result.py  requirements.txt  submit_job.py
Documents_usami/Qiskit/pb_py/: Makefile
Documents_usami/Qiskit/proto/: qc_simulator.proto
Documents_usami/Qiskit/results/: deb29f3f-0686-41f8-975e-085ee0b22898_10.json  deb29f3f-0686-41f8-975e-085ee0b22898_139.json  deb29f3f-0686-41f8-975e-085ee0b22898_6.json  deb29f3f-0686-41f8-975e-085ee0b22898_7.json  deb29f3f-0686-41f8-975e-085ee0b22898_8.json  deb29f3f-0686-41f8-975e-085ee0b22898_9.json
Documents_usami/Qiskit/server/: README.md
Documents_usami/Qiskit/server/src/: config.h  job_utils.h  jwt.h  main.cpp  quantum_simulator.py  server.h
Documents_usami/Qiskit/test/: test_server.py
